feat: add photoUrl and displayName to user
