# server/api/health/index.ts
@@ -2,6 +2,6 @@ import type { DefineMethods } from 'aspida';
 
 export type Methods = DefineMethods<{
   get: {
-    resBody: Record<'server' | 'db' | 's3', 'ok'>;
+    resBody: Record<'server' | 'db' | 's3' | 'cognito', 'ok'>;
   };
 }>;
