# server/common/types/user.ts
@@ -3,6 +3,8 @@ import type { DtoId } from './brandedId';
 export type UserDto = {
   id: DtoId['user'];
   signInName: string;
+  displayName: string;
   email: string;
   createdTime: number;
+  photoUrl: string | undefined;
 };
