# server/domain/user/repository/userCommand.ts
@@ -5,11 +5,18 @@ export const userCommand = {
   save: async (tx: Prisma.TransactionClient, user: UserEntity): Promise<void> => {
     await tx.user.upsert({
       where: { id: user.id },
-      update: { email: user.email, signInName: user.signInName },
+      update: {
+        email: user.email,
+        signInName: user.signInName,
+        displayName: user.displayName,
+        photoUrl: user.photoUrl,
+      },
       create: {
         id: user.id,
         email: user.email,
         signInName: user.signInName,
+        displayName: user.displayName,
+        photoUrl: user.photoUrl,
         createdAt: new Date(user.createdTime),
       },
     });
