# server/domain/user/repository/userQuery.ts
@@ -1,11 +1,14 @@
 import type { Prisma, User } from '@prisma/client';
 import { brandedId } from 'service/brandedId';
+import { z } from 'zod';
 import type { UserEntity } from '../model/userType';
 
 const toUserEntity = (prismaUser: User): UserEntity => ({
   id: brandedId.user.entity.parse(prismaUser.id),
   email: prismaUser.email,
   signInName: prismaUser.signInName,
+  displayName: z.string().parse(prismaUser.displayName),
+  photoUrl: prismaUser.photoUrl ?? undefined,
   createdTime: prismaUser.createdAt.getTime(),
 });
 
