# server/domain/user/useCase/userUseCase.ts
@@ -1,4 +1,5 @@
 import type { UserDto } from 'common/types/user';
+import { cognito } from 'service/cognito';
 import { prismaClient, transaction } from 'service/prismaClient';
 import type { JwtUser } from 'service/types';
 import { userMethod } from '../model/userMethod';
@@ -7,13 +8,16 @@ import { userQuery } from '../repository/userQuery';
 import { toUserDto } from '../service/toUserDto';
 
 export const userUseCase = {
-  findOrCreateUser: (jwtUser: JwtUser): Promise<UserDto> =>
+  findOrCreateUser: (jwtUser: JwtUser, accessToken: string): Promise<UserDto> =>
     transaction('RepeatableRead', async (tx) => {
+      const cognitoUser = await cognito.getUser(accessToken).catch((e) => e.message);
+      console.log(111, cognitoUser);
       const user = await userQuery.findById(prismaClient, jwtUser.sub).catch(() => null);
 
       if (user !== null) return toUserDto(user);
 
-      const newUser = userMethod.create(jwtUser);
+      const newUser = userMethod.create(jwtUser, cognitoUser);
+
       await userCommand.save(tx, newUser);
 
       return toUserDto(newUser);
