# server/prisma/seed.ts
@@ -1,8 +1,17 @@
 import type { Prisma } from '@prisma/client';
 import { prismaClient, transaction } from 'service/prismaClient';
 
-const someFn = async (_tx: Prisma.TransactionClient): Promise<void> => {
+const someFn = async (tx: Prisma.TransactionClient): Promise<void> => {
   // seeder script
+  const users = await tx.user.findMany({ where: { displayName: null } });
+
+  if (users.length > 0) {
+    await Promise.all(
+      users.map((user) =>
+        tx.user.update({ where: { id: user.id }, data: { displayName: user.signInName } }),
+      ),
+    );
+  }
 };
 
 transaction('RepeatableRead', (tx) => Promise.all([someFn(tx)]))
